<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NfcReaderActivity"
    android:background="@color/white"
    android:screenOrientation="portrait">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/historic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/blue_marine"
            android:text="@string/sanner_badge"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="25dp"
            android:src="@drawable/carte_nfc"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/text_nfc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/text_nfc"
            android:textColor="@color/blue_marine"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:backgroundTint="@color/blue_marine"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>