<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:screenOrientation="portrait"
    tools:context=".menunavigation.fragments.AlertFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_detail_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/detail_aquarium"
                android:textAlignment="viewStart"
                android:textColor="@color/blue_marine"
                android:textSize="27sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/temperature_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="144dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/good"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/detail_temperature"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_temperature"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="144dp"
                    android:layout_marginBottom="8dp"
                    android:text=""
                    android:textColor="@color/blue_marine"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.224"
                    app:layout_constraintStart_toEndOf="@+id/temperature_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/light_orange"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="10dp"
                        android:src="@drawable/alert" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="Alerte de température"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_alert"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:gravity="center"
                        android:hint="L'eau de l'aquarium est trop chaude"
                        android:paddingBottom="4dp"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_no_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#F1F1F1"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"
                        android:src="@drawable/ic_baseline_check_24"
                        app:tint="#4DED8D" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:gravity="center"
                        android:paddingTop="4dp"
                        android:text="@string/no_alert"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/comments_aquariumTemp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:gravity="center"
                        android:paddingBottom="4dp"
                        android:text="@string/water_ok"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/room_alert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/red_alert"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_nfc"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/blue_marine"
                android:text="@string/take_alert"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_beacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10sp"
                android:backgroundTint="@color/blue_marine"
                android:text="@string/here"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="4sp"
                    android:src="@drawable/ic_baseline_info_24"
                    app:tint="@color/blue_marine" />

                <TextView
                    android:id="@+id/title_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/remember"
                    android:textColor="@color/blue_marine"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:text="@string/species_type"
                    android:textColor="@color/blue_marine"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/fish" />

                    <TextView
                        android:id="@+id/detail_species"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="center"
                        android:textColor="@color/blue_marine"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:text="@string/wanted_temperature"
                    android:textColor="@color/blue_marine"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/temperatureinfo" />

                    <TextView
                        android:id="@+id/wanted_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="2dp"
                        android:gravity="center"
                        android:textColor="@color/blue_marine"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>